[package]
name = "cameraunit"
version = "4.0.0" # change in readme.md
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
keywords = ["camera", "api", "interface"]
readme = "README.MD"
repository = "https://github.com/sunipkm/cameraunit"
homepage = "https://crates.io/crates/cameraunit"
description = """
An efficient and ergonomic interface to capture images using cameras.
"""
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
log = "0.4.20"
fitsio = "0.21.2"
thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive"] }
serialimage = { version = "2.0.0", features = ["fitsio"] }

[dev-dependencies]
rand = "0.8.4"
serde_json = "1.0.64"
